--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,27 @@
 <resources>
     <string name="app_name">Shopping List</string>
+    <string name="shopping_list">Shopping List</string>
+    <string name="filter_active">Active</string>
+    <string name="filter_completed">Completed</string>
+    <string name="filter_all">All</string>
+    <string name="add_product">Add product</string>
+    <string name="share_shopping_list">Share shopping list</string>
+    <string name="view_cart">View cart</string>
+    <string name="no_items">No items in your shopping list</string>
+    <string name="no_active_items">No active items</string>
+    <string name="no_completed_items">No completed items</string>
+    <string name="tap_to_add_items">Tap + to add items</string>
+    <string name="all_items_completed">All items are completed</string>
+    <string name="complete_items_to_see">Complete some items to see them here</string>
+    <string name="dismiss">Dismiss</string>
+    <string name="uncategorized">Uncategorized</string>
+    <string name="edit_product">Edit Product</string>
+    <string name="add_product_title">Add Product</string>
+    <string name="name">Name</string>
+    <string name="quantity">Quantity</string>
+    <string name="optional">optional</string>
+    <string name="category">Category</string>
+    <string name="note">Note</string>
+    <string name="save">Save</string>
+    <string name="cancel">Cancel</string>
 </resources>
