--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -25,4 +25,35 @@
     <string name="note">Notiz</string>
     <string name="save">Speichern</string>
     <string name="cancel">Abbrechen</string>
+
+    <!-- New Shopping Dialog -->
+    <string name="new_shopping">Neuer Einkauf</string>
+    <string name="start_new_shopping_title">Neuen Einkauf starten?</string>
+    <string name="start_new_shopping_message">Sie haben %d aktive%s Artikel. Wenn Sie einen neuen Einkauf starten, werden die aktiven und erledigten Listen gelöscht. Möchten Sie fortfahren?</string>
+    <string name="yes">Ja</string>
+
+    <!-- Delete Confirmation Dialog -->
+    <string name="delete_item_title">Artikel löschen?</string>
+    <string name="delete_item_message">Sind Sie sicher, dass Sie diesen Artikel löschen möchten?</string>
+    <string name="delete_item_name">Name: %s</string>
+    <string name="delete_item_note">Notiz: %s</string>
+    <string name="delete">Löschen</string>
+
+    <!-- Theme Toggle -->
+    <string name="switch_to_light_mode">Zum hellen Modus wechseln</string>
+    <string name="switch_to_dark_mode">Zum dunklen Modus wechseln</string>
+
+    <!-- New Shopping Message -->
+    <string name="add_items_to_active_list">Artikel zur aktiven Liste hinzufügen</string>
+    <string name="new_shopping_started">Neuer Einkauf gestartet! Artikel zur aktiven Liste hinzufügen.</string>
+
+    <!-- Language Selection -->
+    <string name="select_language">Sprache auswählen</string>
+    <string name="language_english">English</string>
+    <string name="language_hungarian">Magyar</string>
+    <string name="language_german">Deutsch</string>
+
+    <!-- Action Buttons -->
+    <string name="button_add">Hinzufügen</string>
+    <string name="button_remove">Entfernen</string>
 </resources>
