--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,35 @@
     <string name="note">Note</string>
     <string name="save">Save</string>
     <string name="cancel">Cancel</string>
+
+    <!-- New Shopping Dialog -->
+    <string name="new_shopping">New shopping</string>
+    <string name="start_new_shopping_title">Start New Shopping?</string>
+    <string name="start_new_shopping_message">You have %d active item%s. Starting a new shopping session will clear the active and completed lists. Do you want to continue?</string>
+    <string name="yes">Yes</string>
+
+    <!-- Delete Confirmation Dialog -->
+    <string name="delete_item_title">Delete Item?</string>
+    <string name="delete_item_message">Are you sure you want to delete this item?</string>
+    <string name="delete_item_name">Name: %s</string>
+    <string name="delete_item_note">Note: %s</string>
+    <string name="delete">Delete</string>
+
+    <!-- Theme Toggle -->
+    <string name="switch_to_light_mode">Switch to light mode</string>
+    <string name="switch_to_dark_mode">Switch to dark mode</string>
+
+    <!-- New Shopping Message -->
+    <string name="add_items_to_active_list">Add items to active list</string>
+    <string name="new_shopping_started">New shopping started! Add items to active list.</string>
+
+    <!-- Language Selection -->
+    <string name="select_language">Select Language</string>
+    <string name="language_english">English</string>
+    <string name="language_hungarian">Magyar</string>
+    <string name="language_german">Deutsch</string>
+
+    <!-- Action Buttons -->
+    <string name="button_add">Add</string>
+    <string name="button_remove">Remove</string>
 </resources>
